Fix CORS, environment variables, and module federation configuration
Co-authored-by: ViniciusVRodrigues <96784778+ViniciusVRodrigues@users.noreply.github.com>